--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -17,7 +17,7 @@
                    Placeholder="Busca de Produtos"
                    TextChanged="txt_search_TextChanged"/>
         <!-- Criar a barra de busca-->
-        <ListView x:Name="lst_produtos">
+        <ListView x:Name="lst_produtos" ItemSelected="lst_produtos.ItemSelected">
             <ListView.Header>
                 <Grid ColumnDefinitions="*, *, *, *, *">
                     <Label Grid.Column="0" Text="ID" />
