colocar possibilidade de refresh ao puxar tela para baixo

--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -14,8 +14,11 @@
     <VerticalStackLayout>
         <SearchBar x:Name="txt_search" 
                    Placeholder="Buscar Produtos"
-                   TextChanged="txt_search_TextChanged"/>
-        <ListView x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected">
+                   TextChanged="txt_search_TextChanged"
+                   />
+        <ListView x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected"
+                  IsPullToRefreshEnabled="True"
+                  Refreshing="lst_produtos_Refreshing">
             <ListView.Header>
                 <Grid ColumnDefinitions="*, *, *, *, *">
                     <Label Grid.Column="0" Text="ID" />
@@ -34,9 +37,9 @@
                         <Grid ColumnDefinitions="*, *, *, *, *">
                             <Label Grid.Column="0" Text="{Binding Id}" />
                             <Label Grid.Column="1" Text="{Binding Descricao}" />
-                            <Label Grid.Column="2" Text="{Binding Preco}" />
+                            <Label Grid.Column="2" Text="{Binding Preco, StringFormat='{}{0:c}'}" />
                             <Label Grid.Column="3" Text="{Binding Quantidade}" />
-                            <Label Grid.Column="4" Text="{Binding Total}" />
+                            <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}" />
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
