--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -21,7 +21,7 @@
 
     <StackLayout>
         <SearchBar x:Name="txt_search"
-                   Margin="-15, 0, 0, 0"
+                   Margin="10, 0, 10, 0"
                    Placeholder="Buscar Produtos"
                    TextChanged="txt_search_TextChanged"/>
         <Frame Padding="0" Margin="10" VerticalOptions="FillAndExpand">
@@ -30,13 +30,14 @@
                   IsPullToRefreshEnabled="True"
                   Refreshing="lst_produtos_Refreshing">
                 <ListView.Header>
-                    <Grid ColumnDefinitions="30, 100, 80, 50, 90"
-                          BackgroundColor="{StaticResource Gray100}">
-                        <Label Grid.Column="0" Text="ID" Padding="5" FontAttributes="Bold"/>
+                    <Grid ColumnDefinitions="*, *, *, *, *, *"
+                          BackgroundColor="{StaticResource Gray600}">
+                        <Label Grid.Column="0" Text="ID" Padding="10" FontAttributes="Bold"/>
                         <Label Grid.Column="1" Text="Descrição" FontAttributes="Bold"/>
                         <Label Grid.Column="2" Text="Preço" FontAttributes="Bold"/>
                         <Label Grid.Column="3" Text="Qnt" FontAttributes="Bold"/>
                         <Label Grid.Column="4" Text="Total" FontAttributes="Bold" />
+                        <Label Grid.Column="5" Text="Categoria" FontAttributes="Bold" />
                     </Grid>
                 </ListView.Header>
                 <ListView.ItemTemplate>
@@ -45,12 +46,13 @@
                             <ViewCell.ContextActions>
                                 <MenuItem Text="Remover" Clicked="Remover_Clicked" />
                             </ViewCell.ContextActions>
-                            <Grid ColumnDefinitions="*, *, *, *, *">
-                                <Label Grid.Column="0" Text="{Binding Id}" />
+                            <Grid ColumnDefinitions="*, *, *, *, *, *">
+                                <Label Grid.Column="0" Text="{Binding Id}" Padding="10"/>
                                 <Label Grid.Column="1" Text="{Binding Descricao}" />
                                 <Label Grid.Column="2" Text="{Binding Preco, StringFormat='{}{0:c}'}" />
                                 <Label Grid.Column="3" Text="{Binding Quantidade}" />
                                 <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}" />
+                                <Label Grid.Column="5" Text="{Binding Categoria}" />
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
