--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -24,7 +24,21 @@
                    Margin="10, 0, 10, 0"
                    Placeholder="Buscar Produtos"
                    TextChanged="txt_search_TextChanged"/>
-        <Frame Padding="0" Margin="10" VerticalOptions="FillAndExpand">
+
+        <Picker x:Name="categoryPicker"
+                Title="Selecione uma categoria"
+                Margin="10, 10, 10, 0"
+                SelectedIndexChanged="CategoryPicker">
+            <Picker.Items>
+                <x:String>Todas</x:String>
+                <x:String>Alimentos</x:String>
+                <x:String>Bebidas</x:String>
+                <x:String>Limpeza</x:String>
+                <x:String>Higiene</x:String>
+            </Picker.Items>
+        </Picker>
+
+        <Frame Padding="0" Margin="10">
             <ListView x:Name="lst_produtos" 
                   ItemSelected="lst_produtos_ItemSelected"
                   IsPullToRefreshEnabled="True"
