--- a/MauiAppMinhasCompras/Views/EditarProduto.xaml
+++ b/MauiAppMinhasCompras/Views/EditarProduto.xaml
@@ -17,5 +17,20 @@
 
         <Label Text="Preço Unitário:" />
         <Entry x:Name="txt_preco" Text="{Binding Preco}" Keyboard="Numeric" />
+
+        <Picker x:Name="categoryPicker"
+                Title="Categoria:"
+                Margin="0, 10, 0, 0"
+                SelectedIndexChanged="EscolherCategoria">
+            <Picker.Items>
+                <x:String>Alimentos</x:String>
+                <x:String>Bebidas</x:String>
+                <x:String>Limpeza</x:String>
+                <x:String>Higiene</x:String>
+                <x:String>Roupas</x:String>
+                <x:String>Eletrônicos</x:String>
+            </Picker.Items>
+        </Picker>
+
     </VerticalStackLayout>
 </ContentPage>
